# strassen

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
cpp/: CMakeLists.txt
cpp/src/strassen/: matrix.hpp  matrix_multiplier.hpp  naive_matrix_multiplier.hpp  parallel_strassen_matrix_multiplier.hpp  strassen_matrix_multiplier.hpp  transpose_matrix_multiplier.hpp
cpp/src/test/: test_strassen_matrix.cpp
cpp/src/util/: printer.hpp  timer.cpp  timer.hpp
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  matrix.rs  mult.rs  par_mult.rs  timer.rs
src/strassen/: matrix.hpp  matrix_multiplier.hpp  naive_matrix_multiplier.hpp  parallel_strassen_matrix_multiplier.hpp  strassen_matrix_multiplier.hpp  transpose_matrix_multiplier.hpp
src/test/: test_strassen_matrix.cpp
src/util/: printer.hpp  timer.cpp  timer.hpp
